# voice-assistant

./: LICENSE  README.md
backend/: .env.example  .gitignore  Dockerfile  assistant.ipynb  pyproject.toml
backend/app/: assistant.py  config.py  local_assistant.py  main.py  transcription.py
frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: VoiceAssistant.jsx  conversationReducer.js  index.css  layout.js  layout.jsx  page.jsx
